<?xml version="1.0"?>
<package format="2">
  <name>py_mc_rtc</name>
  <version>0.0.0</version>
  <description>using mc_rtc controller from python</description>

  <maintainer email="faculty@irsl.eiiris.tut.ac.jp"> IRSL at Toyohashi Tech </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mc_rtc</depend>

  <!--export>
    <build_type>cmake</build_type>
  </export-->
</package>
